# cooddy

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  configCooddy.cmake
analyzer/tests/suite/CompileOptions/WhitespaceOptions/: CMakeLists.txt  compile_commands.json  main.cpp
checkers/cwe/src/: BufferMaxSizeChecker.cpp  CMakeLists.txt  Checkers.cpp  DivisionByZeroChecker.cpp  DoNotReturnAddrOfLocalVarChecker.cpp  FmtSpecMismatchChecker.cpp  IncompatiblePointerTypeChecker.cpp  IntegerOverflowChecker.cpp  LoopLimitTaintChecker.cpp  MemoryAllocationSizeChecker.cpp  MemoryAndResourceLeakChecker.cpp  MismatchedMemManagementChecker.cpp  NullAfterFreeChecker.cpp  NullPtrDereferenceChecker.cpp  OutOfBoundsChecker.cpp  SensitiveDataExposureChecker.cpp  StringSizeChecker.cpp  TypeSizeMismatchChecker.cpp  UninitializedMemoryUsageChecker.cpp  UseAfterFreeChecker.cpp  WrongStringIncrementChecker.cpp
checkers/cwe/src/FmtSpecMismatchChecker/: CFormatTypeMap.h  FmtType.cpp  FmtType.h  PrintfValidator.h  ScanfValidator.h  ScanfsValidator.h  Validator.h
checkers/sample/src/: CMakeLists.txt  Checkers.cpp  SampleAstChecker.cpp  SampleDfaChecker.cpp
checkers/unusedvars/src/: CMakeLists.txt  Checkers.cpp  UnusedMemberExpressionChecker.cpp  UnusedParamChecker.cpp  UnusedVariablesChecker.cpp
config/: .annotations.json  Strings.csv  (+3 more)
cooddy/: CMakeLists.txt  CallChainConsumer.h  CallGraphConsumer.h  Cli.h  CrashHandler.cpp  CrashHandler.h  EntryFuncConsumer.h  MangledNameFinder.h  TaintMacroCliDefinition.h  main.cpp
cooddy/tests/src/: AnalyzerToolTest.cpp  CallChainTest.cpp  CallGraphTest.cpp  MangledNameFinderTest.cpp
cooddy/tests/suite/AstDumpPrinterTest/: test.cpp  test.txt
cooddy/tests/suite/AstDumpTest/: virtual_methods.json
cooddy/tests/suite/AstDumpTest/virtual_methods/: base.cpp  base.h  derived.h  main.cpp
cooddy/tests/suite/CallChain/: test.cpp  test.json  test_conditions.json  test_cxx_call.json  test_switch.json
cooddy/tests/suite/CallGraph/: test.dot  test.json  testDuplicateFileNames.dot  testDuplicateFileNames.json  testPath.dot  testPath.json  test_conditions.cpp  test_conditions.dot  test_conditions.json  test_cxx_call.cpp  test_cxx_call.dot  test_cxx_call.json  test_switch.cpp  test_switch.dot  test_switch.json  test_template.cpp  test_template.dot  test_template.json
cooddy/tests/suite/MangledNameFinder/: source.cpp
cooddy/tests/suite/analyzerToolTest/: SensiInfoTest.cpp  func.hpp  sink_function_test.cpp  test,quotes_in_csv.cpp  test_ast_dump.cpp  test_async.cpp  test_codeLanguage.cpp  test_fatal_errors.cpp  test_group_html.cpp  test_grouped_report.cpp  test_html.cpp  test_inst.cpp  test_macros.cpp  test_parse_error_log.cpp  test_prob_severity.cpp  test_problem_id.c  test_problem_id_changed.c  test_reporters.cpp  test_source_id.c  test_trace.cpp  test_trace_2.cpp  test_trace_3.cpp  test_trace_4.cpp  test_trace_5.cpp  test_trace_6.cpp  test_trace_7.cpp  test_trace_8.cpp  test_trace_html.cpp  test_trace_html2.cpp  test_unique.cpp
parsers/cxx/: ASTTraverse.cpp  ASTVisitor.cpp  ASTVisitor.h  CMakeLists.txt  CommentCallback.h  CompilersInfo.cpp  CompilersInfo.h  ConvertOptions.cpp  Convertors.cpp  Convertors.h  DiagnosticConsumer.h  FileSystemProxy.h  ParserContext.h  ParserImpl.cpp  ParserImpl.h  PreParser.cpp  PreProcessorCallbacks.h  PreambleData.cpp  PreambleData.h  Utils.h
parsers/java/: ASTConverter.cpp  ASTConverter.h  CMakeLists.txt  JavaLexer.cpp  JavaLexer.h  JavaParser.cpp  JavaParser.h  JavaParserImpl.cpp  JavaParserImpl.h  JavaResolver.h  ParseErrorListener.h
reporters/: CMakeLists.txt  CompositeReporter.cpp  CsvReporter.cpp  JsonReporter.cpp  OutReporter.cpp  Reporter.cpp  RichHTMLSeparateReporterImpl.cpp  RichHtmlReporter.cpp
reporters/SampleReporter/src/: CMakeLists.txt  SampleReporter.cpp  SampleReporter.h
reporters/SampleReporter/tests/src/: SampleReporterTest.cpp
reporters/SarifReporter/src/: CMakeLists.txt  SarifReporter.cpp  SarifReporter.h
reporters/SarifReporter/tests/src/: SarifReporterTest.cpp
reporters/resources/: support_rule.json
reporters/resources/HtmlReportTemplate/: ReportTemplate.html  codeViewBuilder.js  helpers.js  main.js  styles.css  tabulatorInit.js
solver/: BasicBlock.cpp  BasicBlock.h  CMakeLists.txt  CallStack.h  Condition.cpp  ExecBranchesInfo.cpp  ExecBranchesInfo.h  ExecutionContext.cpp  ExecutionContext.h  FunctionBehaviorImpl.cpp  FunctionBehaviorImpl.h  GetNameContext.h  InstructionProcessor.cpp  InstructionProcessor.h  MemoryMonitor.h  OperandsArray.h  PathChecker.cpp  PathChecker.h  StringToExprConverter.h  SymbolAliases.h  SymbolId.h  SymbolsContext.h  TraverseExpression.h  UntrustedSources.h
solver/processors/: ArraySubscriptInstruction.h  AsmInstruction.h  BinaryInstruction.h  BreakStatementInstruction.h  CallInstruction.h  CastInstruction.h  CompoundStatementInstruction.h  ConditionalInstruction.h  CtorInitializerInstruction.h  DeclInstruction.h  ImplicitValueInitListInstruction.h  InitListInstruction.h  LiteralInstruction.h  MemberExprInstruction.h  ProxyInstruction.h  RefInstruction.h  ReturnInstruction.h  ThrowInstruction.h  UnaryInstruction.h  VarDeclInstruction.h
tests/: CMakeLists.txt  CheckerTest.cpp  CheckerTest.h  ProjectPaths.cpp  ProjectPaths.h  TestBaseClass.h  TestCaseParam.h  TestErrorCheckConsumer.h  TestFileSystem.h  TestStream.h  main.cpp
tests/config/: test.profile.json
tunit/: CMakeLists.txt  CodeDescriptionManager.cpp  CommentManager.cpp  MacroManager.cpp  TUnitPackage.cpp  TranslationUnit.cpp
tunit/ast/: AstManager.cpp  CxxNewExpression.cpp  CxxRecordDecl.cpp  EmptyStmt.cpp  FunctionDecl.cpp  Node.cpp  ParamVarDecl.cpp  RefExpression.cpp  Type.cpp  VarDecl.cpp  VirtualOffset.cpp
tunit/cfg/: Cfg.cpp  CfgBlock.cpp  CfgBuilder.cpp  CfgBuilder.h  CfgManager.cpp
utils/: CMakeLists.txt  CsvUtils.cpp  EnvironmentUtils.cpp  FileEntriesCache.cpp  LocaleUtils.cpp  Log.cpp  PathUtils.cpp  StrUtils.cpp  StringsMapping.h  Utc.cpp
utils/tests/: ContextPoolTest.cpp  EnumConversionsTest.cpp  EnvironmentUtilsTest.cpp  PathUtilsTest.cpp  StrUtilsTest.cpp
(+4139 files in other folders)
